# pytimedinput

./: .gitignore  LICENSE  README.rst  pyproject.toml
pyTimedInput/: __init__.py  __version__.py  pyTimedInput.py
pytimedinput/: __init__.py  __version__.py  pytimedinput.py
tests/: test_pytimedinput.py
