[tool.poetry]
name = "pytimedinput"
version = "2.0.0"
description = "Query a user for input with a timeout."
authors = ["WereCatf <werecatf@runbox.com>"]
maintainers = ["WereCatf <werecatf@runbox.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/werecatf/pytimedinput/"
repository = "https://github.com/werecatf/pytimedinput/"
keywords = ["Text-input", "Shell", "Interactive", "Keyboard", "Input"]

[tool.poetry.dependencies]
python = "^3.6"
colorama = { version = '*', markers = "sys_platform == 'win32'" }

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
issues = "https://github.com/werecatf/pytimedinput/issues"
